# HsTicTacToe

./: client.hs  game.hs  operational-tictactoe.cabal
TicTacToe/: ArtificialPlayer.hs  Game.hs  Grid.hs  HumanPlayer.hs  NetPlayer.hs  NetPlayerClient.hs
