Name:           operational-tictactoe
Description:    A generic TicTacToe implemented in terms of operational
Version:        1.0
Category:       Game, Monads
Cabal-Version:  >= 1.2
Author:         Yves Parès
Maintainer:     Yves Parès <limestrael@gmail.com>
Synopsis:       An operational generic TicTacToe game
Build-Type:     Simple

Library
  Build-Depends: base >= 4 && < 5,
                 binary >= 0.5 && < 0.6,
                 bytestring >= 0.9.1 && < 1,
                 mtl >= 1.0 && < 2.0,
                 array >= 0.3 && < 0.4,
                 network >= 2.2 && < 2.3,
                 operational >= 0.2 && < 0.3
  Hs-Source-Dirs: .
  Exposed-Modules: TicTacToe.ArtificialPlayer
                   TicTacToe.Grid
                   TicTacToe.Game
                   TicTacToe.HumanPlayer
                   TicTacToe.NetPlayer
                   TicTacToe.NetPlayerClient

Executable optictactoe-game
  Hs-Source-Dirs: .
  Main-Is: game.hs

Executable optictactoe-client
  Hs-Source-Dirs: .
  Main-Is: client.hs

